Habilitar CORS (GET)

--- a/NetCore1/appsettings.json
+++ b/NetCore1/appsettings.json
@@ -4,8 +4,8 @@
       "Default": "Warning"
     }
   },
-
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-      "DefaultConnection": "server=localhost;database=db_alumnos;uid=root;password=;"
+    "DefaultConnection": "server=localhost;database=db_alumnos;uid=root;password=;"
   }
 }
