--- a/NetCore1/Properties/launchSettings.json
+++ b/NetCore1/Properties/launchSettings.json
@@ -1,10 +1,10 @@
 {
   "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
+    "windowsAuthentication": true,
+    "anonymousAuthentication": false,
     "iisExpress": {
       "applicationUrl": "http://localhost:56447",
-      "sslPort": 44341
+      "sslPort": 44370
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
